--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,25 @@
+# Data
 nltk
 spacy
-scikit-learn
-pandas
-numpy
 matplotlib
 seaborn
 textblob
 wordcloud
 Wikipedia-API==0.8.1
 requests
+
+# Training
+torch>=1.11.0
+transformers>=4.20.0
+datasets>=2.0.0
+tokenizers>=0.12.0
+scikit-learn>=1.1.0
+pandas>=1.4.0
+numpy>=1.21.0
+accelerate>=0.12.0
+sentencepiece>=0.1.96
+sacremoses>=0.0.53
+
+# Monitoring
+wandb>=0.12.0
+tensorboard>=2.8.0 
