--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,9 @@ accelerate>=0.12.0
 sentencepiece>=0.1.96
 sacremoses>=0.0.53
 
+# Auto-encodeur et clustering
+tensorflow>=2.10.0
+
 # Monitoring
 wandb>=0.12.0
 tensorboard>=2.8.0 
